# TLEbotselfhosting

./: Procfile  __main__.py  main.py  pyproject.toml  requirements.txt  run.sh
cogs/: cache_control.py  codeforces.py  contests.py  duel.py  graphs.py  handles.py  lists.py  logging.py  meta.py  owner.py  reminders.py  starboard.py
tle/: requirements.txt  run.sh
util/: cache_system2.py  clist_api.py  codeforces_common.py  discord_common.py  font_downloader.py  graph_common.py
