[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description =""
name = "repl_python3_TLECodingClub"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.3.5"
pycairo = "^1.20.1"
seaborn = "^0.11.2"
aiocache = "^0.11.1"
Flask = "^2.0.2"
[tool.poetry.dev-dependencies]
